; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-opengl.c_KillOpenGL.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-opengl.c_KillOpenGL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@textures = common dso_local global i64* null, align 8
@HiBuffer = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @KillOpenGL() #0 {
  %1 = load i64*, i64** @textures, align 8
  %2 = getelementptr inbounds i64, i64* %1, i64 0
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i64*, i64** @textures, align 8
  %7 = getelementptr inbounds i64, i64* %6, i64 0
  %8 = call i32 @p_glDeleteTextures(i32 2, i64* %7)
  br label %9

9:                                                ; preds = %5, %0
  %10 = load i64*, i64** @textures, align 8
  %11 = getelementptr inbounds i64, i64* %10, i64 0
  store i64 0, i64* %11, align 8
  %12 = load i64, i64* @HiBuffer, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %9
  %15 = load i64, i64* @HiBuffer, align 8
  %16 = call i32 @free(i64 %15)
  store i64 0, i64* @HiBuffer, align 8
  br label %17

17:                                               ; preds = %14, %9
  ret void
}

declare dso_local i32 @p_glDeleteTextures(i32, i64*) #1

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
